--- a/style.css
+++ b/style.css
@@ -116,3 +116,20 @@ table tr td:last-child {
         transform: scale(1);
     }
 }
+
+.restart-btn {
+    border: 1px solid rgba(0,0,0,0.5);
+    background-color: #1C0B7F;
+    z-index: 2;
+    width: 300px;
+    height: 100px;
+    font-size: 40px;
+    color: white;
+    cursor: pointer;
+    position: absolute;
+    bottom: 20px;
+}
+
+.restart-btn:hover {
+    background-color: rgb(59, 40,168);
+}
